Readd Steamworks support + update game initialization and shutdown processes